# cat-breeds-retrieval

./: .gitignore  README.md  clip.py  dataset.py  docker-compose.yaml  index_dataset.py  main.py  pyproject.toml  vector_db.py
config/: config.yaml  logging.py  settings.py
